Fix profile image alignment and make it square
- Profile image left aligned (margin: 20px 0 30px 0)
- Changed dimensions to 200x200px square on desktop
- Responsive sizes: 180x180px (tablet), 150x150px (mobile)
- ASCII profile image centered within square wrapper (90% size)
- Maintains square aspect ratio across all screen sizes

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -15,9 +15,9 @@
     }
     
     #profile-picture {
-        width: 220px;
-        height: 130px;
-        margin: 10px auto 20px;
+        width: 180px;
+        height: 180px;
+        margin: 10px 0 20px 0;
     }
     
     
@@ -76,9 +76,9 @@
     }
     
     #profile-picture {
-        width: 180px;
-        height: 110px;
-        margin: 5px auto 15px;
+        width: 150px;
+        height: 150px;
+        margin: 5px 0 15px 0;
     }
     
     
